bounch of improvements